# opstrail

./: Cargo.toml  README.md  install.ps1  install.sh  quick-install.ps1
.github/workflows/: release.yml
assets/: integration.ps1
choco/: opstrail.nuspec
choco/tools/: chocolateyinstall.ps1  chocolateyuinstall.ps1
src/: cli.rs  config.rs  events.rs  logger.rs  main.rs  projwarp.rs  pruner.rs  query.rs  session.rs  utils.rs
src/tests/: mod.rs  pruner_tests.rs  query_tests.rs  session_tests.rs  utils_tests.rs
tools/: chocolateyinstall.ps1
