[package]
name = "opstrail"
version = "0.1.0"
edition = "2024"
authors = ["リッキー <rickyultimate.dev@gmail.com>"]
description = "Terminal activity time-machine and developer productivity tracker"
readme = "README.md"
license = "MIT"
keywords = ["cli", "productivity", "terminal", "tracking", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
colored = "2"
anyhow = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "trail"
path = "src/main.rs"
