[package]
name = "opstrail"
version = "0.1.0"
edition = "2024"
authors = ["リッキー <rickyultimate.dev@gmail.com>"]
description = "Terminal activity time-machine and developer productivity tracker"
readme = "README.md"
license = "MIT"
keywords = ["cli", "productivity", "terminal", "tracking", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]
repository = "https://github.com/ricky-ultimate/opstrail"
homepage = "https://github.com/ricky-ultimate/opstrail"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6"
colored = "3"
anyhow = "1.0.100"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"

[[bin]]
name = "trail"
path = "src/main.rs"
